# aoc22

./: CMakeLists.txt  README.md
d1/: main.cxx
d2/: main.cxx
d3/: main.cxx
d4/: main.cxx
d5/: main.cxx
d6/: main.cxx
d7/: main.cxx
d8/: main.cxx
d9/: main.cxx
